[package]
name = "runner-token-tool"
version = "1.0.0"
authors = ["nint8835 <riley@rileyflynn.me>"]
edition = "2018"

[dependencies]
clap = "~3.0.0-beta.2"
jsonwebtoken = "~7.2.0"
serde = "~1.0.126"
chrono = { version = "~0.4.19", features = ["serde"] }
reqwest = { version = "~0.11.3", features = ["json", "blocking"] }
